<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_omg">Omg</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_event">Event</string>
    <string-array name="tab_home">
        <item>Today</item>
        <item>OnThisDay</item>
        <item>Horoscope</item>
        <item>Muhurta</item>
    </string-array>
    <string-array name="tab_omg">
        <item>News</item>
        <item>Prayer</item>
        <item>Quote</item>
        <item>Articles</item>
    </string-array>
    <string-array name="tab_calendar">
        <item>Calendar</item>
    </string-array>
    <string-array name="tab_weather">
        <item>Now</item>
        <item>Forecast</item>
        <item>Satellite</item>
        <item>Sun&amp;Moon</item>
    </string-array>
    <string-array name="tab_event">
        <item>Event</item>
    </string-array>
    <string name="set_loc" translatable="false">Please turn on LOCATION service \n from device settings &amp; try again.</string>
    <string name="press_exit" translatable="false">Press again to exit</string>
    <string name="loc_not_found" translatable="false">Looking location..</string>
    <string name="app_not_found" translatable="false">Sorry, App not found.</string>
    <string name="share_title" translatable="false">Calendar &amp; Weather - Android App on Google Play</string>
    <string name="share_desc" translatable="false">Calendar &amp; Weather, provides information for today calendar &amp; current weather.</string>
    <string name="turn_loc" translatable="false">Please turn on LOCATION  \n in device settings.</string>
    <string name="refresh" translatable="false">Seems something wrong!\n Please check connection &amp; tap here.</string>
    <string name="no_result" translatable="false">Seems something wrong!\n No result found yet.</string>
    <string name="version" translatable="false">Version-</string>
    <string name="internet_required" translatable="false">Internet require to update app.</string>
    <string name="enable_try" translatable="false">Please enable location &amp; try again.</string>
    <string name="try_more" translatable="false">Please try again.</string>
    <string name="no_internet" translatable="false">Please check internet.</string>
    <string name="lochelp" translatable="false">To get sunrise &amp; sunset, moonrise &amp; moonset, weather forecast of your location.
    Allow Calendar &amp; Weather app to know your location once.</string>
    <string name="facebook_app_id" translatable="false">338251106549710</string>
    <string name="app_id" translatable="false">ca-app-pub-0468973186456664~6423238219</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-0468973186456664/3330171010</string>
    <string name="interstitials_ad_unit_id" translatable="false">ca-app-pub-0468973186456664/6283637413</string>
    <string name="google_appid" translatable="false">273306593526</string>
    <string name="android_key" translatable="false">AIzaSyBqmEkATbKBAZpwx9iHL5e0Qbo-zRH1StI</string>
    <string name="app_name" translatable="false">Calendar &amp; Weather</string>
    <string name="mincal" translatable="false">2016</string>
    <string name="maxcal" translatable="false">2018</string>
    <string name="appupdatenotif" translatable="false">2017</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string-array name="publication"></string-array>
    <string-array name="tab_title" translatable="false">
        <item name="today">Today</item>

        <item name="calendar">Calendar</item>
        <item name="festival">Festival</item>
        <item name="sunmoon">Sun&amp;Moon</item>
        <item name="photocopy">Photo</item>

    </string-array>
    <string name="code_bengali" translatable="false">bn</string>
    <string name="code_gujarati" translatable="false">gu</string>
    <string name="code_hindi" translatable="false">hi</string>
    <string name="code_kannada" translatable="false">kn</string>
    <string name="code_malayalam" translatable="false">ml</string>
    <string name="code_marathi" translatable="false">mr</string>
    <string name="code_odia" translatable="false">or</string>
    <string name="code_punjabi" translatable="false">pa</string>
    <string name="code_tamil" translatable="false">ta</string>
    <string name="code_telugu" translatable="false">te</string>
    <string name="code_english" translatable="false">en</string>
    <string name="lang_bengali" translatable="false">বাংলা </string>
    <string name="lang_gujarati" translatable="false">ગુજરાતી </string>
    <string name="lang_hindi" translatable="false">हिंदी </string>
    <string name="lang_kannada" translatable="false">ಕನ್ನಡ </string>
    <string name="lang_malayalam" translatable="false">മലയാളം </string>
    <string name="lang_marathi" translatable="false">मराठी </string>
    <string name="lang_odia" translatable="false">ଓଡ଼ିଆ </string>
    <string name="lang_punjabi" translatable="false">ਪੰਜਾਬੀ </string>
    <string name="lang_tamil" translatable="false">தமிழ் </string>
    <string name="lang_telugu" translatable="false">తెలుగు </string>
    <string name="lang_english" translatable="false">English</string>
    <string name="action_bengali" translatable="false">বাংলা ক্যালেন্ডার</string>
    <string name="action_gujarati" translatable="false">ગુજરાતી કેલેન્ડર</string>
    <string name="action_hindi" translatable="false">हिंदी कैलेंडर</string>
    <string name="action_kannada" translatable="false">ಕನ್ನಡ ಕ್ಯಾಲೆಂಡರ್</string>
    <string name="action_malayalam" translatable="false">മലയാളം കലണ്ടർ</string>
    <string name="action_marathi" translatable="false">मराठी कॅलेंडर</string>
    <string name="action_odia" translatable="false">ଓଡ଼ିଆ କ୍ୟାଲେଣ୍ଡର</string>
    <string name="action_punjabi" translatable="false">ਪੰਜਾਬੀ ਦੇ ਕੈਲੰਡਰ</string>
    <string name="action_tamil" translatable="false">தமிழ் காலண்டர்</string>
    <string name="action_telugu" translatable="false">తెలుగు క్యాలెండర్</string>
    <string name="en_action_bengali" translatable="false">বাংলা (Bengali)</string>
    <string name="en_action_gujarati" translatable="false">ગુજરાતી (Gujarati)</string>
    <string name="en_action_hindi" translatable="false">हिंदी (Hindi)</string>
    <string name="en_action_kannada" translatable="false">ಕನ್ನಡ (Kannada)</string>
    <string name="en_action_malayalam" translatable="false">മലയാളം (Malayalam)</string>
    <string name="en_action_marathi" translatable="false">मराठी (Marathi)</string>
    <string name="en_action_odia" translatable="false">ଓଡ଼ିଆ (Odia)</string>
    <string name="en_action_punjabi" translatable="false">ਪੰਜਾਬੀ  (Punjabi)</string>
    <string name="en_action_tamil" translatable="false">தமிழ் (Tamil)</string>
    <string name="en_action_telugu" translatable="false">తెలుగు (Telugu)</string>
    <string name="en_action_english" translatable="false">English</string>
    <string name="en_page_title1" translatable="false">Weather &amp; Forecast</string>
    <string name="en_page_title2" translatable="false">Today</string>
    <string name="en_page_title3" translatable="false">Today Updates</string>
    <string name="en_page_title4" translatable="false">Monthly Calendar</string>
    <string name="en_page_title5" translatable="false">Our Festival</string>
    <string name="en_page_title6" translatable="false">Sun Moon Information</string>
    <string name="en_page_title7" translatable="false">Calendar Photo</string>
    <string name="en_page_title8" translatable="false">Event &amp; Calendar</string>
    <string name="en_page_title9" translatable="false">Notification</string>
    <string name="app_warning" translatable="false">App is not available,do you want to install!</string>
    <string name="notnow" translatable="false">Not,now!</string>
    <string name="fragment_profile_openChatValue" translatable="false">Yes</string>
    <string-array name="header_array" translatable="false">
        <item>WEATHER</item>
        <item>MOON FORECAST</item>
    </string-array>
    <string-array name="e_bara_arr" translatable="false">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI </item>
        <item>SAT</item>
    </string-array>
    <string-array name="e_bara_full_arr" translatable="false">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>
    <string-array name="e_month_arr" translatable="false">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October </item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="e_month_short_arr" translatable="false">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string-array name="en_ritu_arr" translatable="false">
        <item>Summer</item>
        <item>Monsoon</item>
        <item>Autumn</item>
        <item>Late-Autumn</item>
        <item>Winter</item>
        <item>Spring</item>
    </string-array>
    <string-array name="en_rasi_kundali_arr" translatable="false">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpius</item>
        <item>Sagittarius</item>
        <item>Capricornus</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>
    <string-array name="paksha_arr" translatable="false">
        <item>Shukla </item>
        <item>Krishna </item>
    </string-array>
    <string name="o_sankranti">ସଂକ୍ରାନ୍ତି</string>
    <string name="o_paksha">ପକ୍ଷ୍ୟ</string>
    <string name="o_bara">ବାର</string>
    <string name="o_tithi">ତିଥି</string>
    <string name="o_ritu">ଋତୁ</string>
    <string name="o_masa">ମାସ</string>
    <string name="o_festival">ପର୍ବ</string>
    <string name="o_nakshetra">ନକ୍ଷେତ୍ର</string>
    <string name="o_sunsign">କୁଣ୍ଡଳି</string>
    <string name="o_moonsign">ରାଶି</string>
    <string name="o_sunrise">ସୂର୍ଯ୍ୟୋଦୟ</string>
    <string name="o_sunset">ସୂର୍ଯ୍ୟାସ୍ତ</string>
    <string name="o_moonrise">ଚନ୍ଦ୍ରୋଦୟ</string>
    <string name="o_moonset">ଚନ୍ଦ୍ର ଅସ୍ତ</string>
    <string name="o_dina">ଦିନ</string>
    <string name="o_inauspicious">inauspicious</string>
    <string name="o_auspicious">auspicious</string>
    <string name="o_veryauspicious">very auspicious</string>
    <string-array name="l_number_arr">
        <item>௦</item>
    </string-array>
    <string-array name="l_paksha_arr">
        <item>ଶୁକ୍ଳ </item>
    </string-array>
</resources>