<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_omg"
        android:icon="@drawable/ic_nav_omg"
        android:title="@string/nav_omg" />
    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_weather_black_24dp"
        android:title="@string/nav_weather" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_event"
        android:icon="@drawable/ic_nav_event"
        android:title="@string/nav_event" />


</menu>
